//
// version 1.0
//


syntax = "proto3";

option csharp_namespace = "Swisschain.Sirius.GuardianValidatorApi";
option java_package = "io.swisschain.sirius.guardianApi.generated.validatorApprovalRequests";

package swisschain.sirius.GuardianValidatorApi;

service Validators {
  rpc CreateApprovalRequest(CreateApprovalRequestRequest) returns (CreateApprovalRequestResponse);
  rpc GetApprovalResults(GetApprovalResultsRequest) returns (GetApprovalResponse);
  rpc AcknowledgeResult(AcknowledgeResultRequest) returns (AcknowledgeResultResponse);
}

message CreateApprovalRequestRequest {

  string requestId = 1; // technical field with unique request ID
  string transferSigningRequestId = 2; // Id of transaction verification process
  repeated ValidatorRequest validatorRequests = 3; // list of requests to validators

  message ValidatorRequest {

    string validaditorId = 1;
    bytes secretEnc = 2;
    bytes messageEnc = 3;

  }
}

message CreateApprovalRequestResponse {

  ValidatorsApiError error = 1;

}

message GetApprovalResultsRequest {

}

message GetApprovalResponse {

  ValidatorsApiError error = 1;

  repeated ApprovalResponse payload = 2;

  message ApprovalResponse {

    string validatorId = 1; // Id of validator. ID = PublicKeyBytes.Sha256().ToBase64()
    string transferSigningRequestId = 2; // Id of transaction verification process
    ResolutionStatus resolution = 3; // resolution from validator
    string resolutionMessage = 4; // validator message
    string signature = 5; // signature from validator private key (TransferSigningRequestId, Resolution, ResolutionMessage, TransactionDetail) encoded in base64

  }

  enum ResolutionStatus {

    approve = 0; // validator approve a transaction
    reject = 1;  // validator decline a transaction
    skip = 2;    // validator do to has any conserns and reasons to decline.option But validator cannot approve it.

  }

}

message AcknowledgeResultRequest{

  string transferSigningRequestId = 1; // Id of transaction verification process
  string validatorId = 2; // Id of validator. ID = PublicKeyBytes.Sha256().ToBase64()
}

message AcknowledgeResultResponse {

  ValidatorsApiError error = 1;

}


// ********* errors *********

message ValidatorsApiError {

  enum ErrorCodes {
    Unknown = 0;
    InternalServerError = 1; // some error on server side,option try againl later.

  }

  ErrorCodes code = 1; // error code
  string message = 2;  // error message in english
}